syntax = "proto3";
import "oprc-common.proto";

option java_multiple_files = true;
option java_package = "org.hpcclab.oaas.proto";

package oprc;

message ProtoOFunction{
  string key = 1;
  string name = 2;
  string pkg = 3;
  optional string description = 4;
  optional ProtoFunctionType type = 5;
  optional string outputCls = 6;
  optional ProtoDataflowSpec macro = 7;
  optional ProtoProvisionConfig provision = 8;
  repeated VariableDescription variableDescriptions = 9;
  optional ProtoOFunctionDeploymentStatus status = 10;
  optional ProtoFunctionState state = 11;
  optional ProtoQosRequirement qos = 12;
  optional ProtoConstraint constraint = 13;
  optional ProtoOFunctionConfig config = 14;
}

message ProtoProvisionConfig {
  optional KnativeProvision knative = 1;
  optional KDeploymentProvision deployment = 2;
  optional StaticUrlProvision staticUrl = 3;
}

message KnativeProvision{
  string image = 1;
  int32 minScale = 2;
  int32 maxScale = 3;
  int32 concurrency = 4;
  int32 targetConcurrency = 5;
  optional string scaleDownDelay = 6;
  optional string requestsCpu = 7;
  optional string requestsMemory = 8;
  optional string limitsCpu = 9;
  optional string limitsMemory = 10;
  map<string, string> env = 11;
  optional string apiPath = 12;
  int32 port = 13;
}
message KDeploymentProvision{
  string image = 1;
  int32 replicas = 2;
  optional string requestsCpu = 3;
  optional string requestsMemory = 4;
  optional string limitsCpu = 5;
  optional string limitsMemory = 6;
  map<string, string> env = 7;
  optional string apiPath = 8;
  int32 port = 9;
  string pullPolicy = 10;
}
message StaticUrlProvision{
  string url = 1;
}

message VariableDescription {
  string name = 1;
  string comment = 2;
}



message ProtoDataflowSpec {
  repeated DataflowStep steps = 1;
  repeated ProtoDataMapping respBody = 2;
  optional string output = 3;
}


message DataflowStep {
  string function = 1;
  string target = 2;
  optional string as = 3;
  repeated  ProtoDataMapping mappings = 4;
  map<string, string> args = 5;
  map<string, string> argRefs = 6;
}

message ProtoDataMapping {
  string fromObj = 1;
  string fromBody = 2;
  repeated ProtoTransformation transforms = 3;
  bool failOnError = 4;
  bool mapAll =  5;
}

message ProtoTransformation {
  string path = 1;
  string inject = 2;
}

message WorkflowExport {
  string from = 1;
  string as = 2;
}

message ProtoOFunctionDeploymentStatus {
  ProtoDeploymentCondition condition = 1;
  optional string invocationUrl = 2;
  optional string errorMsg = 3;
  int64 ts = 4;
}

message ProtoOFunctionConfig {
  map<string, string> offloadingConfig = 1;
  bool http2 = 2;
}


enum ProtoDeploymentCondition{
  PROTO_DEPLOYMENT_CONDITION_UNSPECIFIED = 0;
  PROTO_DEPLOYMENT_CONDITION_PENDING = 1;
  PROTO_DEPLOYMENT_CONDITION_DEPLOYING = 2;
  PROTO_DEPLOYMENT_CONDITION_RUNNING = 3;
  PROTO_DEPLOYMENT_CONDITION_DOWN = 4;
  PROTO_DEPLOYMENT_CONDITION_DELETED = 5;
}

enum ProtoFunctionState {
  PROTO_FUNCTION_STATE_UNSPECIFIED = 0;
  PROTO_FUNCTION_STATE_ENABLED = 1;
  PROTO_FUNCTION_STATE_DISABLED = 2;
  PROTO_FUNCTION_STATE_REMOVING = 3;
}

enum ProtoFunctionType{
  PROTO_FUNCTION_TYPE_UNSPECIFIED = 0;
  PROTO_FUNCTION_TYPE_TASK = 1;
  PROTO_FUNCTION_TYPE_LOGICAL = 2;
  PROTO_FUNCTION_TYPE_MACRO = 3;
  PROTO_FUNCTION_TYPE_CHAIN = 4;
//  PROTO_FUNCTION_TYPE_STATIC = 6;
//  PROTO_FUNCTION_TYPE_READONLY = 7;
//  PROTO_FUNCTION_TYPE_STATIC_READONLY = 8;
}
